--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,12 @@
 
 body {
     background-image: url("../assets/images/abstract.png");
-    background-repeat: no-repeat;
     background-size: cover;
-    overflow: hidden;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     height: 100vh;
-}
-
-nav {
-    background-color: rgba(95, 158, 160, 0.51);
+    display: flex;
+    flex-direction: column;
 }
 
 #header {
@@ -23,15 +21,18 @@ nav {
     color: #fff;
     text-transform: capitalize;
     text-shadow: 1px 2px 3px #000000;
-    margin-top: 50px;
     font-size: 3rem;
     font-family: 'Orbitron', sans-serif;
-
+    mix-blend-mode: overlay;
+    background: rgba(0,0,0,.5);
+    box-shadow: 0 5px 10px rgba(0,0,0,1);
+    padding: 0 10px;
 }
 
 .search {
     text-align: center;
     margin: 30px 30px;
+    border-bottom: 5px #000000;
 }
 
 #citySearch {
@@ -39,21 +40,27 @@ nav {
     padding: 5px 10px;
     font-size: 1rem;
     font-style: italic;
-    color: orangered ;
     border-radius: 20px;
     border: none;
     outline: none;
     text-transform: capitalize;
     font-weight: bold;
     background-color: rgba(255, 255, 255, 0.25);
+    color: lightpink;
+    mix-blend-mode: inherit;
 }
 
+
+::placeholder {
+    color: lightgreen;
+    opacity: 1;
+}
 
 #searchButton {
     margin-left: 3px;
     padding: 5px 10px;
     font-size: 1rem;
-    color: darkgray;
+    color: white;
     border-radius: 20px;
     border: none;
     transition: all 0.5s;
@@ -65,12 +72,17 @@ nav {
     text-shadow: 1px 2px 3px #000000;
     padding: 5px 15px;
     font-family: 'Orbitron', sans-serif;
+    cursor: pointer;
 }
 
 .weather_info {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.weather_info::-webkit-scrollbar {
+    display: none;
 }
 
 #weatherSummary {
@@ -111,21 +123,18 @@ nav {
     color: white;
 }
 
-
 #days-container {
     margin: 50px auto;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
 }
-
 
 div {
     display: flex;
     justify-content: space-evenly;
     padding: 30px;
-    background-color: rgba(168, 215, 217, 0.45);
+    background: rgba(0,0,0,.5);
     width: 200px;
     height: 190px;
     border-radius: 20px;
@@ -134,14 +143,17 @@ div {
     font-size: 20px;
     color: white;
     box-sizing: border-box;
+    margin: 0 8px;
 }
 
 @media only screen and (max-width: 720px) {
-    body {
+    body{
+        background-attachment: fixed;
+    }
+    .weather_info {
         overflow-y: auto;
     }
     #header{
-        margin-top: 50px;
         font-size: 2.5rem;
     }
     #days-container {
@@ -158,6 +170,12 @@ div {
 }
 
 @media only screen and (max-width: 1200px) {
+    body{
+        background-attachment: fixed;
+    }
+    .weather_info {
+        overflow-y: auto;
+    }
     #days-container {
         display: flex;
         flex-wrap: wrap;
@@ -172,7 +190,7 @@ div {
 
 div, p {
     text-align: center;
-    padding: 5px 10px;
+    padding: 8px 10px;
     position: relative;
     display: inline-block;
     text-transform: capitalize;
@@ -181,5 +199,45 @@ div, p {
 img {
     position: relative;
 }
+
+footer {
+    margin-top: auto;
+    background: rgba(0,0,0,.5);
+}
+
+nav ul {
+    overflow: hidden;
+    color: #ffffff;
+    padding: 0;
+    text-align: center;
+    margin: 0;
+    -webkit-transition: max-height 0.4s;
+    -moz-transition: max-height 0.4s;
+    -ms-transition: max-height 0.4s;
+    -o-transition: max-height 0.4s;
+    transition: max-height 0.4s;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    transition: all 0.5s;
+    margin:0;
+    padding:0;
+    font-size:20px;
+    text-transform:capitalize;
+    position:relative;
+}
+
+a:hover{
+    color: darkseagreen;
+}
+
+nav ul li {
+    display: inline-block;
+    padding: 20px;
+    text-shadow: 1px 2px 3px #000000;
+}
+
 
 
