--- a/css/styles.css
+++ b/css/styles.css
@@ -21,12 +21,13 @@ body {
     color: #fff;
     text-transform: capitalize;
     text-shadow: 1px 2px 3px #000000;
+    letter-spacing: 1px;
     font-size: 3rem;
     font-family: 'Orbitron', sans-serif;
     mix-blend-mode: overlay;
     background: rgba(0,0,0,.5);
-    box-shadow: 0 5px 10px rgba(0,0,0,1);
-    padding: 0 10px;
+    box-shadow: 0 2px 10px rgba(0,0,0,1);
+    padding: 5px 10px;
 }
 
 .search {
@@ -40,31 +41,38 @@ body {
     padding: 5px 10px;
     font-size: 1rem;
     font-style: italic;
+    letter-spacing: 1px;
+    font-family: "Montserrat", sans-serif;
+    text-transform: capitalize;
+    font-weight: bold;
     border-radius: 20px;
     border: none;
     outline: none;
-    text-transform: capitalize;
-    font-weight: bold;
-    background-color: rgba(255, 255, 255, 0.25);
     color: lightpink;
+    background-color: rgba(255, 255, 255, 0.25);
     mix-blend-mode: inherit;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .5);
 }
 
 
 ::placeholder {
     color: lightgreen;
     opacity: 1;
+    letter-spacing: 1px;
+    font-family: "Montserrat", sans-serif;
 }
 
 #searchButton {
     margin-left: 3px;
     padding: 5px 10px;
     font-size: 1rem;
+    letter-spacing: 1px;
     color: white;
     border-radius: 20px;
     border: none;
     transition: all 0.5s;
     background-color: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .5);
 }
 
 #searchButton:hover {
@@ -83,6 +91,7 @@ body {
 
 .weather_info::-webkit-scrollbar {
     display: none;
+    scroll-behavior: smooth;
 }
 
 #weatherSummary {
@@ -99,7 +108,7 @@ body {
     font-size: 2rem;
     text-decoration: underline;
     margin: 5px;
-
+    letter-spacing: 1px;
 }
 
 #temp_label {
@@ -112,15 +121,6 @@ body {
     font-size: 1.5rem;
     color: white;
     text-shadow: 1px 2px 3px #000000;
-}
-
-#tip-box {
-    background-color: transparent;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
 }
 
 #days-container {
@@ -146,54 +146,13 @@ div {
     margin: 0 8px;
 }
 
-@media only screen and (max-width: 720px) {
-    body{
-        background-attachment: fixed;
-    }
-    .weather_info {
-        overflow-y: auto;
-    }
-    #header{
-        font-size: 2.5rem;
-    }
-    #days-container {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
-    div {
-        width: 180px;
-        height: 150px;
-        font-size: 15px;
-        margin: 5px;
-    }
-}
-
-@media only screen and (max-width: 1200px) {
-    body{
-        background-attachment: fixed;
-    }
-    .weather_info {
-        overflow-y: auto;
-    }
-    #days-container {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    div{
-        width: 180px;
-        height: auto;
-        font-size: 15px;
-        margin: 10px;
-    }
-}
-
 div, p {
     text-align: center;
     padding: 8px 10px;
     position: relative;
     display: inline-block;
     text-transform: capitalize;
+    letter-spacing: 1px;
 }
 
 img {
@@ -203,6 +162,7 @@ img {
 footer {
     margin-top: auto;
     background: rgba(0,0,0,.5);
+    box-shadow: 0 -2px 10px rgba(0,0,0,1);
 }
 
 nav ul {
@@ -221,16 +181,19 @@ nav ul {
 a {
     text-decoration: none;
     color: inherit;
-    transition: all 0.5s;
+    transition: all 0.9s;
     margin:0;
-    padding:0;
+    padding:10px;
+    border-radius: 10px;
     font-size:20px;
     text-transform:capitalize;
+    font-family: 'Orbitron', sans-serif;
     position:relative;
+    letter-spacing: 1px;
 }
 
 a:hover{
-    color: darkseagreen;
+    background-image: linear-gradient(to right, #6b2cf5,#d450e6);
 }
 
 nav ul li {
@@ -239,5 +202,77 @@ nav ul li {
     text-shadow: 1px 2px 3px #000000;
 }
 
+/*styles for about main content section */
+.main-content{
+    display: block;
+    margin-left:auto;
+    margin-right:auto;
+    background-color: rgba(0,0,0,.5);
+    border-radius: 30px;
+    width: auto;
+    height: auto;
+    margin-top: 100px;
+
+}
+
+.main-content p {
+    color: #fff;
+    text-transform: none;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    text-align: left;
+    letter-spacing: 1px;
+    padding: 5%;
+    display: flex;
+    flex-wrap: wrap;
+}
+/*Media Query section*/
+@media only screen and (max-width: 768px) {
+    body{
+        background-attachment: fixed;
+    }
+    .weather_info {
+        overflow-y: auto;
+        scroll-behavior: smooth;
+    }
+    #header{
+        font-size: 2.5rem;
+    }
+    #days-container {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    div {
+        width: 180px;
+        height: 150px;
+        font-size: 15px;
+        margin: 5px;
+    }
+    .main-content {
+        margin-right: 5%;
+        margin-left: 5%;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    body{
+        background-attachment: fixed;
+    }
+    .weather_info {
+        overflow-y: auto;
+        scroll-behavior: smooth;
+    }
+    #days-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    div{
+        width: 180px;
+        height: auto;
+        font-size: 15px;
+        margin: 10px;
+    }
+}
 
 
