--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@
 }
 
 body {
-    background-image: url("../assets/images/abstract.png");
+    /*background-image: url("../assets/images/abstract.png");*/
+    background-image: url("https://imgur.com/RLVWQ8L");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
