--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,8 @@
 
 body {
     /*background-image: url("../assets/images/abstract.png");*/
-    background-image: linear-gradient(to bottom right, #2f80ff, #ffda64);
+    /*background-image: linear-gradient(to bottom right, #2f80ff, #ffda64);*/
+    background-image: url("https://i.imgur.com/RLVWQ8L.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
