--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;0,900;1,400&family=Orbitron:wght@400;500;600;700;900&display=swap');
 
+/*imports*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;0,900;1,400&family=Orbitron:wght@400;500;600;700;900&display=swap');
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*setting the main parameters for styling*/
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~`*/
+/*the main body styling*/
 body {
     /*background-image: url("../assets/images/abstract.png");*/
     /*background-image: linear-gradient(to bottom right, #2f80ff, #ffda64);*/
@@ -18,6 +22,8 @@ body {
     flex-direction: column;
 }
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*styling for the headers*/
 #header {
     text-align: center;
     color: #fff;
@@ -30,14 +36,19 @@ body {
     background: rgba(0,0,0,.5);
     box-shadow: 0 2px 10px rgba(0,0,0,1);
     padding: 5px 10px;
+    user-select: none;
 }
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*centering the search area*/
 .search {
     text-align: center;
     margin: 30px 30px;
     border-bottom: 5px #000000;
 }
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~`*/
+/*styling for the search bar*/
 #citySearch {
     text-align: center;
     padding: 5px 10px;
@@ -56,14 +67,16 @@ body {
     box-shadow: 0 1px 3px rgba(0, 0, 0, .5);
 }
 
-
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*style for the placeholder text*/
 ::placeholder {
-    color: lightgreen;
+    color: palevioletred;
     opacity: 1;
     letter-spacing: 1px;
     font-family: "Montserrat", sans-serif;
 }
 
+/*search button styling*/
 #searchButton {
     margin-left: 3px;
     padding: 5px 10px;
@@ -77,20 +90,25 @@ body {
     box-shadow: 0 1px 3px rgba(0, 0, 0, .5);
 }
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #searchButton:hover {
-    color: #fff;
+    color: #5bd3c7;
     text-shadow: 1px 2px 3px #000000;
     padding: 5px 15px;
     font-family: 'Orbitron', sans-serif;
     cursor: pointer;
 }
 
+/*search section styling ends*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*weather block information styles start*/
 .weather_info {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+/*hiding the scrollbar*/
 .weather_info::-webkit-scrollbar {
     display: none;
     scroll-behavior: smooth;
@@ -125,6 +143,9 @@ body {
     text-shadow: 1px 2px 3px #000000;
 }
 
+/*weather block information styling ends*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*weather information styles for 6 days begins*/
 #days-container {
     margin: 50px auto;
     display: flex;
@@ -132,6 +153,8 @@ body {
     align-items: center;
 }
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*general div styling*/
 div {
     display: flex;
     justify-content: space-evenly;
@@ -157,10 +180,13 @@ div, p {
     letter-spacing: 1px;
 }
 
+
 img {
     position: relative;
 }
-
+/*weather information styles for 6 days ends*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*styling for footer begins*/
 footer {
     margin-top: auto;
     background: rgba(0,0,0,.5);
@@ -180,10 +206,11 @@ nav ul {
     transition: max-height 0.4s;
 }
 
+/*setting style for all links*/
 a {
     text-decoration: none;
     color: inherit;
-    transition: all 0.9s;
+    transition: all 0.5s;
     margin:0;
     padding:10px;
     border-radius: 10px;
@@ -195,7 +222,8 @@ a {
 }
 
 a:hover{
-    background-image: linear-gradient(to right, #6b2cf5,#d450e6);
+   color: #5bd3c7;
+    font-size: 25px;
 }
 
 nav ul li {
@@ -203,7 +231,9 @@ nav ul li {
     padding: 20px;
     text-shadow: 1px 2px 3px #000000;
 }
+/*styling for footer ends*/
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*styles for about main content section */
 .main-content{
     display: block;
@@ -218,16 +248,139 @@ nav ul li {
 }
 
 .main-content p {
-    color: #fff;
+    color: palevioletred;
     text-transform: none;
+    text-shadow: 1px 2px 3px #000000;
     font-family: "Montserrat", sans-serif;
-    font-weight: bold;
+    font-weight: 400;
     text-align: left;
     letter-spacing: 1px;
     padding: 5%;
     display: flex;
     flex-wrap: wrap;
+    user-select: none;
 }
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~`*/
+/*styles for contact form*/
+.contact-form-box {
+    background-color: rgba(0,0,0,.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 25px auto;
+    width: 350px;
+    height: 450px;
+    border-radius: 30px;
+}
+
+
+#contact-me{
+    text-align: center;
+    padding: 10px 10px;
+    color: #fff;
+    mix-blend-mode: overlay;
+    text-transform: capitalize;
+    font-family: "Orbitron", sans-serif;
+    text-shadow: 1px 2px 10px #000000;
+    letter-spacing: 1px;
+    user-select: none;
+}
+
+/*form placeholder style*/
+.contact-form ::placeholder {
+    color: palevioletred;
+}
+
+/*centering the form elements*/
+.contact-form {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/*input name styles*/
+#contact-name{
+    padding: 8px 10px;
+    border-radius: 10px;
+    border: none !important;
+    outline: none;
+    margin: 4px;
+    color: #fff;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    background: rgba(0,0,0,.4);
+    text-shadow: 1px 2px 3px #000000;
+    box-shadow: 0 1px 3px #000000;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+}
+
+/*email input styling*/
+#contact-email{
+    padding: 8px 10px;
+    border-radius: 10px;
+    border: none !important;
+    outline: none;
+    margin: 5px;
+    color: #fff;
+    background: rgba(0,0,0,.4);
+    text-shadow: 1px 2px 3px #000000;
+    box-shadow: 0 1px 3px #000000;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+}
+/*text area styling*/
+#text-area{
+    background: rgba(0,0,0,.4);
+    padding: 10px 10px;
+    border-radius: 10px;
+    max-height: 200px;
+    max-width:  200px;
+    width: 200px;
+    height: 200px;
+    border: none !important;
+    outline: none;
+    margin: 5px;
+    color: #5bd3c7;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-shadow: 1px 2px 3px #000000;
+    box-shadow: 0 1px 3px #000000;
+}
+
+/*hiding textarea scrollbar*/
+#text-area::-webkit-scrollbar{
+    display: none;
+    scroll-behavior: smooth;
+}
+
+/*sendButton style*/
+#send-btn{
+    width: 100%;
+    padding: 8px 20px;
+    border-radius: 10px;
+    border: none !important;
+    outline: none;
+    margin: 4px;
+    background: rgba(0,0,0,.4);
+    transition: all 0.5s;
+    color: palevioletred;
+    box-shadow: 0 1px 3px #000000;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+}
+
+#send-btn:hover{
+    color: #5bd3c7;
+    padding: 8px 25px;
+    font-size: 20px;
+    font-family: "Orbitron",sans-serif;
+    text-shadow: 1px 2px 3px #000000;
+    cursor: pointer;
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*Media Query section*/
 @media only screen and (max-width: 768px) {
     body{
